# dynamo-es

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
db/: create_tables.sh  dynamo_db.yaml  upcast_test_entry.json
src/: cqrs.rs  error.rs  event_repository.rs  helpers.rs  lib.rs  query_repository.rs  testing.rs  types.rs  view_repository.rs
tests/: lib.rs
