[package]
name = "dynamo-es"
version = "0.4.8"
authors = ["Dave Garred <dave.garred@serverlesstechnology.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["cqrs", "event-sourcing", "serverless"]
description = "A DynamoDB implementation of an event repository for cqrs-es."
repository = "https://github.com/serverlesstechnology/dynamo-es"
documentation = "https://docs.rs/dynamo-es"
readme = "README.md"

[dependencies]
cqrs-es = "0.4.8"

async-trait = "0.1"
aws-sdk-dynamodb = "0.24"
futures = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
aws-config = "0.54"
uuid = { version = "1.3", features = ["v4"]}

