[package]
name = "dynamo-es"
version = "0.4.11"
authors = ["Dave Garred <dave.garred@serverlesstechnology.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["cqrs", "event-sourcing", "serverless"]
description = "A DynamoDB implementation of an event repository for cqrs-es."
repository = "https://github.com/serverlesstechnology/dynamo-es"
documentation = "https://docs.rs/dynamo-es"
readme = "README.md"

[dependencies]
cqrs-es = "0.4.11"

async-trait = "0.1"
aws-sdk-dynamodb = "1.14"
futures = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
aws-config = "1.1.5"
uuid = { version = "1.7", features = ["v4"]}
